--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
       <!-- Links para redes sociais/BOTÕES -->
       <a class="apresentacao__links__link" href="https://github.com/dassanches" target="_blank">
-        <img src="github.png">
+        <img src="./imagens/github.png">
         Github</a>
       <a class="apresentacao__links__link" href="https://www.linkedin.com/in/danielly-sanches-22772a211/" target="_blank">
-        <img src="linkedin.png">
+        <img src="./imagens/linkedin.png">
         Linkedin</a>
       <a class="apresentacao__links__link" href="https://www.twitch.tv/login" target="_blank">
-        <img src="twitch.png">
+        <img src="./imagens/twitch.png">
         Twitch</a>
 
     </div>
