--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas vero impedit iste ipsam fugit itaque repellendus labore porro corrupti? Qui eos nam explicabo aliquam non facere quae. Distinctio, error! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nesciunt ratione ullam quas odio atque explicabo aperiam labore voluptate, doloribus nihil libero provident! Totam dolores, consectetur aspernatur pariatur dolorem inventore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit explicabo, voluptate quo enim voluptates, quis perspiciatis fuga minima facilis eligendi soluta sit ad ex illo incidunt dicta reiciendis ratione saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dicta exercitationem a odit nisi laudantium assumenda temporibus reprehenderit, necessitatibus, repudiandae distinctio voluptatem vero doloremque vitae sed, maiores quibusdam ducimus beatae.</p>
     </section>
 
-    <img src="foto projeto.png" alt="foto da Joana">
+    <img src="./imagens/foto-projeto.png" alt="foto da Joana">
   </main>
 
   <!-- Rodapé -->
