--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <!-- Imagem de perfil -->
-    <img src="./imagens/foto projeto.png" alt="foto da Joana" width="300" height="300">
+    <img src="./imagens/foto-projeto.png" alt="foto da Joana" width="300" height="300">
   </main>
 
   <!-- Rodapé da página -->
